--- a/.env
+++ b/.env
@@ -2,4 +2,4 @@ OPENAI_API_KEY =
 PINECONE_API_KEY =
 PINECONE_ENVIRONMENT = gcp-starter
 PINECONE_INDEX_NAME = qp-ai-assessment
-HUGGINGFACEHUB_API_TOKEN = hf-***
+HUGGINGFACEHUB_API_TOKEN = hf_***
